Working Int and Behave

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 GOOGLE_API_KEY="AIzaSyC6rcStK7vdwoloB65UqppIWbb2L-Zf_Ik"
-#OPENAI_API_KEY="sk-proj-7X9GjYup3JK8lMchWJp5T3BlbkFJKTZcTbXOHGva7U0QENMI"
+OPENAI_API_KEY="sk-proj-7X9GjYup3JK8lMchWJp5T3BlbkFJKTZcTbXOHGva7U0QENMI"
