--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-streamlit
-pillow
-langchain-core
-langchain
-langchain-openai
-langchain-google-genai
-python-dotenv
-PyPDF2
-google.generativeai
-python-dotenv
+beautifulsoup4==4.12.3
+openai==1.51.0
+pandas==2.0.1
+protobuf==5.28.2
+PyPDF2==3.0.1
+python-dotenv==1.0.1
+Requests==2.32.3
+streamlit==1.38.0
